upgraded project to JDK 25 and eliminated deprecated functions