@@ -1,2 +1,2 @@
 @echo off
-@java -jar build/libs/esword-cli-1.0.0-SNAPSHOT.jar %*
+@java --enable-native-access=ALL-UNNAMED -jar build/libs/esword-cli-1.0.0-SNAPSHOT.jar %*
